[package]
name = "polars_rust_lab"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
polars = { version = "0.48.1", features = ["lazy", "random", "dynamic_group_by", "temporal", "dtype-date"] }
